# ProgrammingHomeworks

./: .gitignore  CMakeLists.txt
Homework15/Task1/: CMakeLists.txt  animal.h  animal_cat.cpp  animal_cow.cpp  animal_dog.cpp  main.cpp
Homework15/Task2/: CMakeLists.txt  animal.h  animal_cat.cpp  animal_cow.cpp  animal_dog.cpp  main.cpp
Homework15/Task3-4/: CMakeLists.txt  main.cpp  point.cpp  point.h
Homework15/Task8-9/: CMakeLists.txt  basket.cpp  basket.h  main.cpp
Homework16/Task6/: CMakeLists.txt  main.cpp  ticket.cpp  ticket.h
Homework16/Task7-8/: CMakeLists.txt  main.cpp  student.cpp  student.h
Homework17/Task1/: CMakeLists.txt  m512.cpp  m512.h  main.cpp
Homework17/Task7/: CMakeLists.txt  main.cpp  order.cpp  order.h
Homework18/Task12-13/: CMakeLists.txt  bar.cpp  bar.h  hole.cpp  hole.h  main.cpp
Homework18/Task123/: CMakeLists.txt  counter.cpp  counter.h  main.cpp  myclass.h
Homework18/Task45/: CMakeLists.txt  main.cpp  ticket.cpp  ticket.h  ticketdp.cpp  ticketdp.h
Homework18/Task89/: CMakeLists.txt  car.cpp  car.h  main.cpp
Homework19/Task1_ModulePhone/: Aerial.cpp  Aerial.h  BasePhone.cpp  BasePhone.h  Battery.cpp  Battery.h  CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
Homework19/Task2_Factory/: Aerial.cpp  Aerial.h  Battery.cpp  Battery.h  CMakeLists.txt  Camera.cpp  Camera.h  Phone.cpp  Phone.h  main.cpp
Homework19/Task3_FlatMatrix/: CMakeLists.txt  FlatMatrix.cpp  FlatMatrix.h  main.cpp
Homework19/Task45789_Matrix/: CMakeLists.txt  DynArray.h  (+3 more)
Homework23/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  README.md  TreeIterator.cpp  TreeIterator.h  main.cpp
(+55 files in other folders)
