cmake_minimum_required(VERSION 3.20)
project(AllHomeworks)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Homework15/Task1)
add_subdirectory(Homework15/Task2)
add_subdirectory(Homework15/Task3-4)
add_subdirectory(Homework15/Task8-9)
add_subdirectory(Homework16/Task6)
add_subdirectory(Homework16/Task7-8)
add_subdirectory(Homework17/Task1)
add_subdirectory(Homework17/Task7)

