cmake_minimum_required(VERSION 3.20)
project(AllHomeworks)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Homework15/Task1)
add_subdirectory(Homework15/Task2)
add_subdirectory(Homework15/Task3-4)
add_subdirectory(Homework15/Task8-9)
add_subdirectory(Homework16/Task6)
add_subdirectory(Homework16/Task7-8)
add_subdirectory(Homework17/Task1)
add_subdirectory(Homework17/Task7)
add_subdirectory(Homework18/Task123)
add_subdirectory(Homework18/Task45)
add_subdirectory(Homework18/Task12-13)
add_subdirectory(Homework18/Task89)
add_subdirectory(Homework19/Task1_ModulePhone)
add_subdirectory(Homework19/Task2_Factory)
add_subdirectory(Homework19/Task3_FlatMatrix)
add_subdirectory(Homework19/Task45789_Matrix)
add_subdirectory(Homework20/Task3)
add_subdirectory(Homework20/Task4_7)
add_subdirectory(Homework20/Task5)
add_subdirectory(Homework20/Task6_8)
add_subdirectory(Homework20/Task11Stack)
add_subdirectory(Homework20/Task11Queue)
add_subdirectory(Homework21/Tree)
add_subdirectory(Homework22/Task1)
add_subdirectory(Homework22/Task2_4)